# glfx

./: AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  ProjectHome.md  config.h.in  configure  configure.ac  glfx.pc  glfx.pc.cmake  glfx.sln  glfx.vcxproj  glfx.vcxproj.filters
debian/: README.Debian  changelog  changelog.ba  control  copyright  install
debian/patches/: debian-changes
debian/source/: lintian-overrides
doc/: glfx.tex
glfxc/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
glfxc/nbproject/private/: configurations.xml  private.xml
include/: glfx.h
include/gl/: glfx.h
man/: Makefile.am  Makefile.in  glfxc.1
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: CMakeLists.txt  Makefile.am  Makefile.in  glfx.cpp  glfx.lpp  glfx.ypp  glfxClasses.h  glfxLALRParser.cpp  glfxLALRParser.hpp  glfxParser.h  glfxScanner.cpp  glfxScanner.h  glfxc.cpp
test/: .project  .pydevproject  regression.py  test_list
test/golden/: invalid_prefix  invalid_program  missing_shader  success
test/shaders/: light_pass.glsl  lighting.glsl  missing_prefix.glsl  missing_shader.glsl  null_technique.glsl  simple_technique.glsl
